修复注解的bug